--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
+    "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -14,7 +15,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@web3-react/core": "6.1.9",
+    "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "6.0.7",
     "ethers": "5.5.4",
     "react": "^18.3.1",
