--- a/hardhat/.gitignore
+++ b/hardhat/.gitignore
@@ -1,5 +1,7 @@
 node_modules
 .env
+env.sh
+
 
 # Hardhat files
 /cache
@@ -15,6 +17,7 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+ignition/deployments/*
 
 node_modules
 .env
